포트폴리오 최종

--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -134,7 +134,7 @@
                         </div>
 
                         <div data-delay="0.4" class="lc-image has-animation fade-in-up">
-                            <img src="images/project4/mypet-dog2.png" alt="Landing Header Image">
+                            <img src="images/project3/order_pop.png" alt="Landing Header Image">
                         </div>
 
                     </div>
@@ -263,7 +263,7 @@
                             <a href="project-3" target="_blank">
 
                                 <!-- Page Screenshot -->
-                                <img src="images/list.png" alt="Showcase Screenshot">
+                                <img src="images/project3/home_img.png" alt="Showcase Screenshot">
                                 <!--/ Page Screenshot -->
 
                             </a>
@@ -343,7 +343,6 @@
     <script src="js/plugins.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/jquery.smoothState.js"></script>
-    <script src="js/landing.js"></script>
-</body>
+ </body>
 
-</html>
+ </html>
