--- a/src/main/resources/templates/project-2.mustache
+++ b/src/main/resources/templates/project-2.mustache
@@ -354,7 +354,7 @@
 
                         <!-- Next Project Image -->
                         <div class="next-project-image-wrapper">
-                            <img src="images/projects/gold-and-gold/bs_cov.jpg" alt="Next Project Image">
+                            <img src="images/project3/next_project.png" alt="Next Project Image">
                         </div>
                         <!--/ Next Project Image -->
 
