--- a/src/main/resources/templates/project-3.mustache
+++ b/src/main/resources/templates/project-3.mustache
@@ -73,7 +73,7 @@
 
                 <!-- Project Image -->
                 <div class="project-image">
-                    <img src="images/projects/nyc-22-bond/sp_head.jpg" alt="Project Header Image">
+                    <img src="images/project3/home_img.png" alt="Project Header Image">
                 </div>
                 <!--/ Project Image -->
 
@@ -129,7 +129,7 @@
                             <span class="pe-empty-space" style="height: 250px"></span>
                             <!-- Image Wrapper -->
                             <div class="image-wrapper image-lightbox has-animation slide-top">
-                                <img src="images/projects/nyc-22-bond/image_1.jpg" alt="Single Image">
+                                <img src="images/project3/order_menu.png" alt="Single Image">
                             </div>
                             <!--/ Image Wrapper -->
 
@@ -137,7 +137,7 @@
 
                             <!-- Image Wrapper -->
                             <div class="image-wrapper image-lightbox has-animation slide-top">
-                                <img src="images/projects/nyc-22-bond/image_4.jpg" alt="Single Image">
+                                <img src="images/project3/order_pop.png" alt="Single Image">
                             </div>
                             <!--/ Image Wrapper -->
 
@@ -149,7 +149,7 @@
 
                             <!-- Image Wrapper -->
                             <div class="image-wrapper image-lightbox has-animation slide-top">
-                                <img src="images/projects/nyc-22-bond/image_2.jpg" alt="Single Image">
+                                <img src="images/project3/result.png" alt="Single Image">
                             </div>
                             <!--/ Image Wrapper -->
 
@@ -157,7 +157,7 @@
 
                             <!-- Image Wrapper -->
                             <div class="image-wrapper image-lightbox has-animation slide-top">
-                                <img src="images/projects/nyc-22-bond/image_3.jpg" alt="Single Image">
+                                <img src="images/project3/sell.png" alt="Single Image">
                             </div>
                             <!--/ Image Wrapper -->
 
@@ -210,44 +210,40 @@
                     <div class="wrapper-full">
 
                         <!-- Column -->
-                        <div class="c-col-9 no-gap">
+                        <div class="c-col-6">
+
+                            <span class="pe-empty-space" style="height: 30px"></span>
 
                             <!-- Image Wrapper -->
-                            <div class="image-wrapper image-lightbox has-animation slide-right">
-                                <img src="images/projects/nyc-22-bond/image_5.jpg" alt="Single Image">
+                            <div class="image-wrapper image-lightbox has-animation slide-top">
+                                <img src="images/project3/mos-logo.png" alt="Single Image">
                             </div>
                             <!--/ Image Wrapper -->
 
                         </div>
                         <!--/ Column -->
-
-                        <div class="c-col-3 hide-mobile"></div>
-                    </div>
-                    <!-- Wrapper -->
-
-                    <!-- Wrapper -->
-                    <div class="wrapper-full">
-
-                        <div class="c-col-3 hide-mobile"></div>
 
                         <!-- Column -->
-                        <div class="c-col-9 no-gap">
+                        <div class="c-col-6">
+
+                            <span class="pe-empty-space" style="height: 30px"></span>
 
                             <!-- Image Wrapper -->
-                            <div class="image-wrapper image-lightbox has-animation slide-left">
-                                <img src="images/projects/nyc-22-bond/image_6.jpg" alt="Single Image">
+                            <div class="image-wrapper image-lightbox has-animation slide-top">
+                                <img src="images/project3/basket.png" alt="Single Image">
                             </div>
                             <!--/ Image Wrapper -->
 
                         </div>
                         <!--/ Column -->
+
+
 
                     </div>
                     <!-- Wrapper -->
 
                 </div>
                 <!--/ Section -->
-
 
                 <!-- Section -->
                 <div class="section">
@@ -256,85 +252,36 @@
                     <div class="wrapper-small">
 
                         <!-- Column -->
-                        <div class="c-col-12">
-
-                            <!-- Text wrapper -->
-                            <div class="text-wrapper">
-
-                                <div class="caption has-animation skew-up">ABOUT PROJECT</div>
-
-                                <h3 class="has-animation lines-fade-up">
-                                    Minimize backwards overflow focus on the customer journey yet quick sync run it up the flagpole, ping the boss and circle back crisp ppt for quantity.
-                                </h3>
-                                <p data-delay="0.2" class="big-p has-animation lines-fade-up">
-                                    Baseline the procedure and samepage your department my capacity is full, or clear blue water what's our go to market strategy?. Root-and-branch review race without a finish line pixel pushing, or 60% to 30% is a lot of persent zeitgeist so regroup and blue sky. Highlights high turnaround rate win-win-win idea shower.
-                                </p>
-
-                            </div>
-                            <!--/ Text wrapper -->
-
-                        </div>
-                        <!--/ Column -->
-
-                    </div>
-                    <!--/ Wrapper (Small) -->
-
-                </div>
-                <!--/ Section -->
-
-
-                <!-- Section -->
-                <div class="section">
-
-                    <!-- Wrapper (Full) -->
-                    <div class="wrapper-full">
-
-                        <!-- Column -->
-                        <div class="c-col-12">
-
-                            <!-- Carousel -->
-                            <div class="pe-carousel swiper-container">
-                                <div class="swiper-wrapper">
-                                    <div class="pe-carousel-item swiper-slide">
-                                        <img alt="Carousel Image" src="images/projects/nyc-22-bond/image_7.jpg">
-                                    </div>
-
-
-                                    <div class="pe-carousel-item swiper-slide">
-                                           <img alt="Carousel Image" src="images/projects/nyc-22-bond/image_8.jpg">
-                                    </div>
-
-                                </div>
-
-                                <span class="carousel-navigate">
-                                    <i class="fa fa-chevron-left"></i>
-                                    <i class="fa fa-chevron-right"></i>
-                                </span>
-                            </div>
-                            <!--/ Carousel -->
-
-                        </div>
-                        <!--/ Column -->
-
-                    </div>
-                    <!--/ Wrapper (Full) -->
-                    
-                                        <!-- Wrapper (Small) -->
-                    <div class="wrapper-small">
-
-                        <!-- Column -->
-                        <div class="c-col-12">
+                        <div class="c-col-8">
 
                             <!-- Text Wrapper -->
-                            <div class="text-wrapper align-center">
+                            <div class="text-wrapper">
 
-                                <div class="caption">FINALIZE PROJECT</div>
+                                <h1 class="big-title has-animation skew-up">
+                                    결과
+                                </h1>
 
-                                <h2 class="thin has-animation lines-up">
+                            </div>
+                            <!--/ Text Wrapper -->
 
-                                    Draw a line in the sand one-sheet we need a recap by eod, cob or whatever comes first. Productize open door policy horsehead offer, make corporate.
+                        </div>
+                        <!--/ Column -->
 
-                                </h2>
+                        <!-- Column -->
+                        <div class="c-col-6 hide-mobile"></div>
+                        <!--/ Column -->
+
+                        <!-- Column -->
+                        <div class="c-col-6">
+
+                            <!-- Text Wrapper -->
+                            <div class="text-wrapper">
+
+                                <p class="big-p has-animation lines-up">
+                                    팀원과 함께 진행한 팀 프로젝트로 Github를 통해 협업 과정을 연습할 수 있었습니다.
+                                    Github 내의 협업 도구들을 활용하며 팀원과 지속적인 소통을 진행했습니다.
+                                    Spring 개발과 MVC 패턴을 연습할 수 있었으며 추후에 개발 한 MOS의 토대가 되었습니다.
+                                </p>
 
                             </div>
                             <!--/ Text Wrapper -->
